testdata/baselines/reference/submodule/conformance/parserArrowFunctionExpression14.errors.txt
fileJs.js(1,1): error TS2304: Cannot find name 'a'.
fileJs.js(1,40): error TS2304: Cannot find name 'd'.
fileJs.js(1,46): error TS2304: Cannot find name 'e'.
fileTs.ts(1,1): error TS2304: Cannot find name 'a'.
fileTs.ts(1,40): error TS2304: Cannot find name 'd'.
fileTs.ts(1,46): error TS2304: Cannot find name 'e'.


==== fileJs.js (3 errors) ====
    a() ? (b: number, c?: string): void => d() : e; // Not legal JS; "Unexpected token ':'" at first colon
    ~
!!! error TS2304: Cannot find name 'a'.
                                           ~
!!! error TS2304: Cannot find name 'd'.
                                                 ~
!!! error TS2304: Cannot find name 'e'.
    
==== fileTs.ts (3 errors) ====
    a() ? (b: number, c?: string): void => d() : e;
    ~
!!! error TS2304: Cannot find name 'a'.
                                           ~
!!! error TS2304: Cannot find name 'd'.
                                                 ~
!!! error TS2304: Cannot find name 'e'.
    